[tool.poetry]
name = "grepbible"
version = "0.3.1"
description = ""
authors = ["Maxim Litvak <maxim@litvak.eu>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"
importlib-resources = "^6.1.3"
rapidfuzz = "^3.13.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"

[tool.poetry.group.ml]
optional = true

[tool.poetry.group.ml.dependencies]
sentence-transformers = "^4.1.0"
faiss-cpu = "^1.11.0"
langchain = "^0.3.25"
langdetect = "^1.0.9"

[tool.poetry.scripts]
gbib = "grepbible.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
