[tool.poetry]
name = "grepbible"
version = "0.3.3"
description = ""
authors = ["Maxim Litvak <maxim@litvak.eu>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"
importlib-resources = "^6.1.3"
rapidfuzz = "^3.13.0"
torch = { version = "2.1.0", optional = true }
sentence-transformers = { version = ">=2.2.2", optional = true }
faiss-cpu = { version = ">=1.7.4", optional = true }
langchain = { version = "0.2.1", optional = true }
langchain-core = { version = "<0.3", optional = true }
pydantic = { version = ">=1.6.2,<2.0.0", optional = true }
langdetect = { version = "^1.0.9", optional = true }
numpy = { version = "<1.26.0,>=1.18.5", optional = true }
scipy = { version = ">=1.9.0", optional = true }
scikit-learn = { version = "*", optional = true }
jsonschema = { version = ">=3.0", optional = true }
toolz = { version = "*", optional = true }
srsly = { version = ">=2.4.0,<3.0.0", optional = true }
peft = { version = ">=0.4.0", optional = true }

[tool.poetry.extras]
ml = [
    "torch",
    "sentence-transformers",
    "faiss-cpu",
    "langchain",
    "langchain-core",
    "pydantic",
    "langdetect",
    "numpy",
    "scipy",
    "scikit-learn",
    "jsonschema",
    "toolz",
    "srsly",
    "peft"
]

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"

[tool.poetry.group.ml]
optional = true

[tool.poetry.group.ml.dependencies]
torch = ">=2.1.0"
sentence-transformers = ">=2.2.2"
faiss-cpu = ">=1.7.4"
langchain = "0.2.1"
langchain-core = "<0.3"
pydantic = "<2.0.0,>=1.6.2"
langdetect = "^1.0.9"
numpy = "<1.26.0,>=1.18.5"
scipy = ">=1.9.0"
scikit-learn = "*"
jsonschema = ">=3.0"
toolz = "*"
srsly = ">=2.4.0,<3.0.0"
peft = ">=0.4.0"

[tool.poetry.scripts]
gbib = "grepbible.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"