[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "grepbible"
dynamic = ["version"]
description = "A CLI tool to look up Bible verses locally."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Maxim Litvak", email = "maxim@litvak.eu" },
]
keywords = ["bible", "KJV"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Programming Language :: Python",
    "Topic :: Education",
    "Topic :: Religion",
]
dependencies = [
    "requests>=2.31.0",
    "importlib-resources>=6.1.3",
    "rapidfuzz>=3.13.0",
]

[project.optional-dependencies]
ml = [
    "torch>=2.4.0",
    "sentence-transformers>=2.2.2",
    "faiss-cpu>=1.7.4",
    "langdetect>=1.0.9",
    "numpy>=1.26.0",
    "scipy>=1.9.0",
    "scikit-learn>=1.6.1",
    "peft>=0.4.0",
]

[project.scripts]
gbib = "grepbible.cli:main"

[project.urls]
Homepage = "https://gitlab.com/maxlit/grepbible"

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
version_scheme = "no-guess-dev"

[tool.hatch.build.targets.sdist]
include = ["grepbible/"]

[tool.hatch.build.targets.wheel]
packages = ["grepbible"]

[dependency-groups]
dev = [
    "pytest>=8.0.2",
]

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
